--- a/Kconfig
+++ b/Kconfig
@@ -43,6 +43,7 @@ source "file/Kconfig"
 source "gdb/Kconfig"
 source "kexec-tools/Kconfig"
 source "make/Kconfig"
+source "mdadm/Kconfig"
 source "netcat/Kconfig"
 source "ntfs-3g/Kconfig"
 source "rtnet/Kconfig"
