--- a/boards/generic/skel/etc/mdev.conf
+++ b/boards/generic/skel/etc/mdev.conf
@@ -1,3 +1,4 @@
 [hs]d[a-z][0-9]+ 0:0 0666 */sbin/mount_storage.sh
 sr[0-9]+ 0:0 0666 */sbin/mount_storage.sh
 mmcblk[0-9]+p[0-9]+ 0:0 0666 */sbin/mount_storage.sh
+md[0-9]+p[0-9]+ 0:0 0666 */sbin/mount_storage.sh
