--- a/Kconfig
+++ b/Kconfig
@@ -47,6 +47,7 @@ source "make/Kconfig"
 source "mdadm/Kconfig"
 source "netcat/Kconfig"
 source "ntfs-3g/Kconfig"
+source "parted/Kconfig"
 source "rtnet/Kconfig"
 source "strace/Kconfig"
 source "tcpdump/Kconfig"
