--- a/mdadm/Makefile
+++ b/mdadm/Makefile
@@ -6,13 +6,17 @@ compile-make-args-y +=							       \
 	CPPFLAGS="$(cppflags-y)" CFLAGS="$(cflags-y)" CXXFLAGS="$(cxxflags-y)" \
 	LDFLAGS="$(ldflags-y)"
 
+staging-make-args-y +=							       \
+	CC="$(CC)" CXX="$(CXX)" LD="$(cross)ld" AR="$(cross)ar"		       \
+	NM="$(cross)nm" RANLIB="$(cross)ranlib"	       \
+	CPPFLAGS="$(cppflags-y)" CFLAGS="$(cflags-y)" CXXFLAGS="$(cxxflags-y)" \
+	LDFLAGS="$(ldflags-y)"
+
 Makefile: $(srcdir)/Makefile $(deps)
 	rm -Rf * || :
 	{ echo VPATH=$(srcdir); cat $<; } > $@
 
-.PHONY: compile
 compile: Makefile
-	$(configure-env-y) $(MAKE) $(compile-make-args-y)
 
 staging: default-autotools-staging
 
