--- a/parted/Makefile
+++ b/parted/Makefile
@@ -1,7 +1,8 @@
 rootfs-y := /usr/bin/parted
 
 configure-args-y += \
-	--without-readline
+	--without-readline \
+	LIBS="-luuid -ldevmapper"
 
 compile: default-autotools-compile
 
@@ -9,4 +10,4 @@ staging: default-autotools-staging
 
 rootfs: default-rootfs
 
-clean: default-clean
+clean: default-autotools-clean
