--- a/device-mapper/Makefile
+++ b/device-mapper/Makefile
@@ -3,6 +3,7 @@ rootfs-y :=					\
 	/lib/libdevmapper.so.*
 
 configure-args-y +=				\
+	ac_cv_func_malloc_0_nonnull=yes		\
 	--disable-readline			\
 	--enable-pkgconfig
 
