32/64: avoid issue with FUS32 enabled and XENO32 disabled

--- a/fuse/Kconfig
+++ b/fuse/Kconfig
@@ -9,6 +9,7 @@ if FUSE
 config FUSE32
        bool "build FUSE using 32 bits toolchain"
        depends on HAVE_TOOLCHAIN32
+       select TOOLCHAIN32
 
 config FUSE_SRCDIR
        srcdir "FUSE directory"
