--- a/xenomai/Makefile
+++ b/xenomai/Makefile
@@ -206,6 +206,9 @@ ifeq ($(MKR_ARCH_X86_64),y)
 confcheck-$(MKR_XENO32) += $(call confcheck-if, \
 	test -z "$(CONFIG_IA32_EMULATION)", \
 	MKR_XENO32 needs CONFIG_IA32_EMULATION on x86_64)
+confcheck-$(call not, $(MKR_XENO32)) += $(call confcheck-if, \
+	test -n "$(MKR_FUSE32)", \
+	MKR_FUSE32 must be disabled if MKR_XENO32 is disabled)
 endif
 endif
 
