toolchain: remove the lib32 and lib64 symlinks
They were only necessary for the loader to be found in the right place,
but this is no longer needed since it is now installed where the kernel
will look for it.

We have to keep the arm-linux-gnueabihf symlinks though, they seem to
be required for systems compiled with such toolchain to boot.

--- a/toolchain/Makefile
+++ b/toolchain/Makefile
@@ -15,7 +15,7 @@ ifeq ($(MKR_SYSROOT_AUTO),y)
 
 -include .mkr.toolchain_dirs32
 else
-LIBDIRS32=$(foreach d,lib32 usr/lib32,$(MKR_SYSROOT32)/$(d))
+LIBDIRS32=$(foreach d,lib lib32 usr/lib32,$(MKR_SYSROOT32)/$(d))
 endif
 endif
 
@@ -57,19 +57,47 @@ bins:
 	for b in $(bins-y); do \
 		for d in $(BINDIRS); do \
 			bin="$$d/$$b"; \
-			if [ -e "$$bin" ]; then \
-				case "$$bin" in \
-				*usr/bin/*) dest=usr/bin;; \
-				*usr/sbin/*) dest=usr/sbin;; \
-				*/sbin/*) dest=sbin;; \
-				*) dest=bin;; \
-				esac; \
-				cp --preserve=timestamps "$$bin" "$(pkginst)/$$dest"; \
-				case "$$b" in \
-				ldd) sed -i 's/bash/ash/g' "$(pkginst)/$$dest/$$b";; \
-				esac; \
-				break; \
-			fi; \
+			[ -e "$$bin" ] || continue; \
+			case "$$bin" in \
+			*usr/bin/*) dest=usr/bin;; \
+			*usr/sbin/*) dest=usr/sbin;; \
+			*/sbin/*) dest=sbin;; \
+			*) dest=bin;; \
+			esac; \
+			cp --preserve=timestamps "$$bin" "$(pkginst)/$$dest"; \
+			case "$$b" in \
+			ldd) sed -i 's/bash/ash/g' "$(pkginst)/$$dest/$$b";; \
+			esac; \
+			break; \
+		done; \
+	done
+
+libs:
+	mkdir -p "$(pkginst)/lib" "$(pkginst)/usr/lib"
+ifeq ($(MKR_ARM_FLOAT_VFP_HARD_ABI),y)
+	ln -s . "$(pkginst)/lib/arm-linux-gnueabihf"; \
+	ln -s . "$(pkginst)/usr/lib/arm-linux-gnueabihf"
+endif
+	loaderbase=$(shell basename $(LOADER)); \
+	loaderdir=$(shell dirname $(LOADER)); \
+	mkdir -p "$(pkginst)$$loaderdir"; \
+	for l in $$loaderbase $(libs-y); do \
+		for d in $(LIBDIRS); do \
+			case "$$d" in \
+			*usr/lib*) dest=usr/lib;; \
+			*) dest=lib;; \
+			esac; \
+			case "$$l" in \
+			"$$loaderbase") \
+				file="$$d"/"$$l"; \
+				dest="$$loaderdir";; \
+			*.so) file="$$d"/"$$l".[0-9];; \
+			*) file="$$d"/"$$l"-*.so;; \
+			esac; \
+			set -- "$$file"; \
+			[ -e $$1 ] || continue; \
+			cp --preserve=mode,timestamps $$1 "$(pkginst)/$$dest"; \
+			break; \
 		done; \
 	done
 
@@ -98,44 +126,7 @@ libs32:
 		done; \
 	done
 
-libs32-link:
-	ln -s lib "$(pkginst)/lib32"; \
-	ln -s lib "$(pkginst)/usr/lib32"
-
-libs:
-	mkdir -p "$(pkginst)/lib" "$(pkginst)/usr/lib"; \
-	rm -f "$(pkginst)/lib64" "$(pkginst)/usr/lib64"; \
-	ln -s lib "$(pkginst)/lib64"; \
-	ln -s lib "$(pkginst)/usr/lib64"
-ifeq ($(MKR_ARM_FLOAT_VFP_HARD_ABI),y)
-	ln -s . "$(pkginst)/lib/arm-linux-gnueabihf"; \
-	ln -s . "$(pkginst)/usr/lib/arm-linux-gnueabihf"
-endif
-	loaderbase=$(shell basename $(LOADER)); \
-	loaderdir=$(shell dirname $(LOADER)); \
-	mkdir -p "$(pkginst)$$loaderdir"; \
-	for l in $$loaderbase $(libs-y); do \
-		for d in $(LIBDIRS); do \
-			case "$$d" in \
-			*usr/lib*) dest=usr/lib;; \
-			*) dest=lib;; \
-			esac; \
-			case "$$l" in \
-			"$$loaderbase") \
-				file="$$d"/"$$l"; \
-				dest="$$loaderdir";; \
-			*.so) file="$$d"/"$$l".[0-9];; \
-			*) file="$$d"/"$$l"-*.so;; \
-			esac; \
-			set -- "$$file"; \
-			[ -e $$1 ] || continue; \
-			cp --preserve=mode,timestamps $$1 "$(pkginst)/$$dest"; \
-			break; \
-		done; \
-	done
-
 libs32-$(MKR_TOOLCHAIN32) := libs32
-libs32-$(call not, $(MKR_TOOLCHAIN32)) := libs32-link
 
 staging: bins libs $(libs32-y)
 
